--- a/master/templates/website/tutorial_series_list.html
+++ b/master/templates/website/tutorial_series_list.html
@@ -24,7 +24,8 @@
         </div>
         <div class="col-md-5">
             <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="{{ item.tutorials.all.0.video }}" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="{{ item.tutorials.all.0.video }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <!-- <iframe class="embed-responsive-item" src="" allowfullscreen></iframe> -->
             </div>
         </div>
     </div>
