--- a/master/templates/base.html
+++ b/master/templates/base.html
@@ -23,7 +23,7 @@
             <ul class="navbar-nav mr-auto">
                 {% with url_name=request.resolver_match.url_name %}
                 <li class="nav-item {% if url_name == 'index' %} active {% endif %}">
-                    <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url 'index' %}">Home</a>
                 </li>
                 <li class="nav-item {% if url_name == 'tutorial_series_list' %} active {% endif %}">
                     <a class="nav-link" href="{% url 'tutorials:tutorial_series_list' %}">Tutorial</a>
